sort.basic.bubble.AlgBubbleSort2.scala.error
Erreur de compilation :
AlgBubbleSort2:3: error: not found: value getNombreValeur
  for(i <- getNombreValeur - 2 to 0) {
           ^