sort.basic.bubble.AlgBubbleSort2.scala.code
def bubbleSort2() {
  for(i <- getNombreValeur - 2 to 0) {
    for(j <- 0 to i) {
      if(getValeur(i - 1) > getValeur(i))
      	echange(i, i + 1)
    }
  }
}